<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/new_user_label"
        style="@style/list_item_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:text="@string/new_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_email_input_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_user_label" />

    <EditText
        android:id="@+id/new_username_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:hint="@string/user_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_email_input_txt" />

    <EditText
        android:id="@+id/new_pwd_input_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_username_txt" />

    <EditText
        android:id="@+id/confirm_pwd_input_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pwd_input_txt" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pwd_input_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>