<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    android:clickable="true"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/sign_up_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/login_label"
        style="@style/list_item_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:text="@string/current_user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_input_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_label" />

    <EditText
        android:id="@+id/login_pwd_input_txt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_input_txt" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_dim"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_pwd_input_txt" />

    <TextView
        android:id="@+id/new_user_txt"
        style="@style/list_item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:padding="@dimen/std_dim"
        android:text="@string/new_user_click_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>