<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    android:elevation="4dp">

    <TextView
        android:id="@+id/new_note_label"
        style="@style/list_item_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:text="@string/new_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/note_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:hint="@string/note_title"
        app:layout_constraintTop_toBottomOf="@id/new_note_label" />

    <Spinner
        android:id="@+id/subject_spinner"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:background="@color/pastel_green"
        android:popupBackground="@color/pastel_green"
        android:popupElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_title_input" />

    <EditText
        android:id="@+id/note_body_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nil_dp"
        android:layout_margin="@dimen/std_dim"
        android:background="@drawable/note_input_body_bg"
        android:fontFamily="cursive"
        android:gravity="top|start"
        android:hint="@string/notes"
        android:padding="@dimen/std_dim"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/note_submit_btn"
        app:layout_constraintTop_toBottomOf="@id/subject_spinner" />

    <Button
        android:id="@+id/note_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_dim"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>